package board.master.model;

/**
 * Abstract class representing a generic action or move in a game.
 * 
 * This class serves as a base for defining specific actions in different games.
 * Actions can include things like moving a piece in a board game, selecting an
 * option in a menu,
 * or any other form of interaction within the game's rules and mechanics.
 * 
 * Subclasses of this class should implement specific details and behaviors
 * relevant to the particular
 * action they represent. This could include, for example, the starting and
 * ending position of a move
 * in a board game, the piece or player involved in the action, or any other
 * details that define the action.
 */
public abstract class Action {

    public abstract boolean equals(Object obj);
}
